# runa

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  cliff.toml  ui-architecture-notes.md
.github/workflows/: ci.yml
crates/runa_app/: Cargo.toml
crates/runa_app/src/: app.rs  lib.rs  runa_app.rs
crates/runa_asset/: Cargo.toml
crates/runa_asset/src/: app_icon.rs  audio.rs  font.rs  handle.rs  lib.rs  loader.rs  texture.rs
crates/runa_core/: Cargo.toml
crates/runa_core/src/: codefirst.rs  color.rs  console.rs  debug_renderer.rs  input.rs  lib.rs  math.rs  registry.rs  renderer.rs
crates/runa_core/src/audio/: audio_engine.rs  mod.rs  sound_handle.rs
crates/runa_core/src/components/: audio_source.rs  camera.rs  camera2d.rs  camera3d.rs  collider2d.rs  component.rs  cursor_interactable.rs  light.rs  mesh_renderer.rs  mod.rs  object_definition_instance.rs  physics_collision.rs  screen_effects.rs  serialized_type_storage.rs  sorting.rs  sprite_renderer.rs  tilemap.rs  transform.rs  world_atmosphere.rs
crates/runa_core/src/components/ui/: canvas.rs  mod.rs  ui_asset.rs  ui_node.rs  ui_renderer.rs
crates/runa_core/src/ocs/: command.rs  context.rs  mod.rs  object.rs  script.rs  world.rs
crates/runa_core/src/render/: instance.rs  mod.rs  quad.rs
crates/runa_core/src/systems/: builtin.rs  event_system.rs  interaction_system.rs  mod.rs
crates/runa_ecs/: Cargo.toml
crates/runa_ecs/src/: archetype.rs  blob_vec.rs  entity.rs  lib.rs  query.rs  system.rs  world.rs
crates/runa_editor/: Cargo.toml  build.rs
crates/runa_editor/src/: content_browser.rs  editor_app.rs  editor_camera.rs  editor_textures.rs  inspector.rs  main.rs  style.rs
crates/runa_editor/src/editor_app/: app_handler.rs  editor_commands.rs  helpers.rs  placeables.rs  project.rs  ui.rs  ui_editor.rs  viewport.rs  world_ops.rs
crates/runa_engine/: Cargo.toml
crates/runa_engine/src/: engine.rs  lib.rs  prelude.rs  scene.rs  systems.rs
crates/runa_engine/tests/: typed_archetypes.rs
crates/runa_hub/: Cargo.toml  build.rs
crates/runa_hub/src/: icon_loader.rs  main.rs
crates/runa_macros/src/: lib.rs
crates/runa_math/: Cargo.toml
crates/runa_project/: Cargo.toml
crates/runa_project/src/: lib.rs  placeable_objects.rs  project.rs  runa3d.rs  scaffold.rs  ui_asset.rs  world_asset.rs
crates/runa_render/: Cargo.toml
crates/runa_render/src/: font.rs  lib.rs  renderer.rs
crates/runa_render/src/pipelines/: mesh.wgsl  mesh_pipeline.rs  mod.rs  pipeline.rs  post_process_pipeline.rs  shader.wgsl  ui_pipeline.rs
crates/runa_render/src/resources/: texture.rs
crates/runa_render/src/shaders/: blit.wgsl  mesh.wgsl  post_process.wgsl  shader.wgsl
crates/runa_render/src/sprite/: mod.rs  pipeline.rs  shader.wgsl
crates/runa_render_api/: Cargo.toml
crates/runa_render_api/src/: command.rs  lib.rs  queue.rs
docs/: development-guide.md  rendering-performance.md  ui_feature_changes.md  ui_feature_notes.md
docs/architecture/: object-model.md  renderer-audit.md  renderer.md  runtime-and-editor-update.md  strategic-direction.md
docs/math/: interpolation.md
docs/tutorials/: README.md
docs/tutorials/advanced/: registration-and-archetypes.md
docs/tutorials/components/: cursor-interactable.md  physics-collision.md  sorting.md  sprite-animator.md  sprite-renderer.md  transform.md
docs/tutorials/getting-started/: creating-a-2d-game.md  creating-a-3d-game.md  creating-your-first-app.md
docs/tutorials/scripts/: creating-scripts.md
docs/tutorials/systems/: audio.md  input.md
docs/tutorials/tilemap/: tilemap.md
examples/sandbox/: Cargo.toml
examples/sandbox/src/: app.rs  collider_demo.rs  main.rs  player.rs  tester1.rs  tilemap_tester.rs
examples/sandbox_3d/src/: camera_controller.rs  main.rs  rotating_cube.rs  rotating_cube2.rs
examples/sandbox_soundtest/src/: main.rs  player.rs  sound_emitter.rs  tester1.rs  tilemap_tester.rs
examples/sandbox_ui/src/: main.rs
scripts/: release.ps1
