[workspace]
exclude = ["templates"]
members = [
    "crates/runa_macros",
    "crates/runa_engine",
    "crates/runa_app",
    "crates/runa_core",
    "crates/runa_render",
    "crates/runa_asset",
    "crates/runa_project",
    "crates/runa_hub",
    "crates/runa_editor",
    "crates/runa_render_api",
    "examples/sandbox",
    "examples/sandbox_soundtest",
    "examples/sandbox_3d",
]
resolver = "2"

[workspace.package]
version = "0.5.1-alpha.1"
authors = ["Nik Neza <star.off.nik@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RunaGameEngine/runa"
description = "2D/3D game engine in Rust"

[workspace.dependencies]
winit = { version = "0.30.13" }
pollster = { version = "0.4" }
wgpu = { version = "29.0" }
glam = { version = "0.32.1" }
