[workspace]
members = [
    "crates/runa_macros",
    "crates/runa_engine",
    "crates/runa_app",
    "crates/runa_core",
    "crates/runa_ecs",
    "crates/runa_render",
    "crates/runa_asset",
    # "crates/runa_project",
    # "crates/runa_editor",
    "crates/runa_render_api",
    "examples/sandbox",
    "examples/sandbox_soundtest",
    "examples/sandbox_3d",
    "examples/sandbox_ui",
]
exclude = ["templates"]
resolver = "2"

[workspace.package]
version = "0.7.1-alpha.1"
authors = ["Nik Neza <nik.n.neza@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RunaGameEngine/runa"
description = "2D/3D game engine in Rust"

[workspace.dependencies]
winit = { version = "0.30.13" }
pollster = { version = "0.4" }
wgpu = { version = "29.0" }
glam = { version = "0.32.1" }
gltf = { version = "1.4", features = ["import"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
