[package]
name = "runa_app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
runa_core = { path = "../runa_core" }
runa_render = { path = "../runa_render" }
runa_render_api = { path = "../runa_render_api" }
runa_asset = { path = "../runa_asset" }

winit.workspace = true
