[package]
name = "runa_asset"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
image = "0.24"         # For loading PNG files
rodio = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror = "1.0"
wgpu.workspace = true
winit.workspace = true
zip.workspace = true
gltf.workspace = true
