[package]
name = "runa_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
egui = "0.34.1"
egui-winit = "0.34.1"
egui-wgpu = "0.34.1"
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
dirs = "5.0"
image = { version = "0.25", features = ["png"] }
rfd = "0.14"

runa_core = { path = "../runa_core" }
runa_render = { path = "../runa_render" }
runa_render_api = { path = "../runa_render_api" }
runa_asset = { path = "../runa_asset" }
runa_project = { path = "../runa_project" }

[build-dependencies]
image = { version = "0.25", features = ["png", "ico"] }
winres = "0.1"
