[package]
name = "runa_hub"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"] }
egui_extras = { version = "0.33.3", features = ["image"] }
egui = "0.33.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
tokio = { version = "1.0", features = ["full"] }
image = { version = "0.25", features = ["png"] }
dirs = "5.0"
rfd = "0.14"
runa_project = { path = "../runa_project" }

[build-dependencies]
image = { version = "0.25", features = ["png", "ico"] }
winres = "0.1"
