[package]
name = "runa_project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
ron = "0.8"
runa_core = { path = "../runa_core" }
runa_asset = { path = "../runa_asset" }
gltf.workspace = true
zip.workspace = true
image = "0.24"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
