[package]
name = "runa_render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
runa_asset = { path = "../runa_asset" }
runa_render_api = { path = "../runa_render_api" }

winit.workspace = true
pollster.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
